Answer first three items

--- a/jupyter/latex.ipynb
+++ b/jupyter/latex.ipynb
@@ -239,6 +239,15 @@
     "\n",
     "12. Pick your favourite math course and write the notes from your last class in LaTeX."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. $ \\cos(\\alpha \\pm \\beta) = \\cos(\\alpha) \\cos(\\beta) \\mp \\sin(\\alpha) \\sin(\\beta) $\n",
+    "2. $\\int \\frac{1}{1+x^2} \\ d\\mathrm{x} = \\arctan(x) + C$\n",
+    "3. $\\frac{\\partial\\mathbf{u}}{\\partial t} + \\left( \\mathbf{u} \\cdot \\nabla \\right)\\mathbf{u} -  \\nu \\nabla^2 \\mathbf{u} = -\\nabla w + \\mathbf{g}$"
+   ]
   }
  ],
  "metadata": {
@@ -257,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
