--- a/jupyter/latex.ipynb
+++ b/jupyter/latex.ipynb
@@ -245,8 +245,26 @@
    "metadata": {},
    "source": [
     "1. $ \\cos(\\alpha \\pm \\beta) = \\cos(\\alpha) \\cos(\\beta) \\mp \\sin(\\alpha) \\sin(\\beta) $\n",
+    "\n",
     "2. $\\int \\frac{1}{1+x^2} \\ d\\mathrm{x} = \\arctan(x) + C$\n",
-    "3. $\\frac{\\partial\\mathbf{u}}{\\partial t} + \\left( \\mathbf{u} \\cdot \\nabla \\right)\\mathbf{u} -  \\nu \\nabla^2 \\mathbf{u} = -\\nabla w + \\mathbf{g}$"
+    "\n",
+    "3. $\\frac{\\partial\\mathbf{u}}{\\partial t} + \\left( \\mathbf{u} \\cdot \\nabla \\right)\\mathbf{u} -  \\nu \\nabla^2 \\mathbf{u} = -\\nabla w + \\mathbf{g}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. \n",
+    "\\begin{equation}\n",
+    "    \\oint_{C} (L d\\mathrm{x} + M d\\mathrm{y}) = \\iint_{D} \\left( \\frac{\\partial M}{\\partial x} \n",
+    "    - \\frac{\\partial L}{\\partial y} \\right) d\\mathrm{x} \\ d\\mathrm{y}\n",
+    "\\end{equation}\n",
+    "\n",
+    "5. \n",
+    "\\begin{equation}\n",
+    "    \\lim_{x \\to \\infty} \\frac{ \\pi(x) }{ \\frac{x}{ \\log(x) } } = 1\n",
+    "\\end{equation}"
    ]
   }
  ],
