--- a/jupyter/latex.ipynb
+++ b/jupyter/latex.ipynb
@@ -264,6 +264,26 @@
     "5. \n",
     "\\begin{equation}\n",
     "    \\lim_{x \\to \\infty} \\frac{ \\pi(x) }{ \\frac{x}{ \\log(x) } } = 1\n",
+    "\\end{equation}\n",
+    "\n",
+    "6. \n",
+    "\\begin{equation}\n",
+    "    \\sum_{n = 0}^{\\infty} \\frac{ f^{(n)} (a) }{ n! } (x - a)^n\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "7.\n",
+    "\\begin{equation}\n",
+    "    \\int_S (\\nabla \\times \\mathbf{f}) \\cdot d\\mathbf{A}\n",
+    "    = \\oint_C \\mathbf{f} \\cdot d\\mathbf{r}\n",
+    "\\end{equation}\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\int_{\\partial \\Omega} \\omega = \\int_{\\Omega} \\partial \\omega\n",
     "\\end{equation}"
    ]
   }
