Add more answers to latex.ipynb

--- a/jupyter/latex.ipynb
+++ b/jupyter/latex.ipynb
@@ -284,6 +284,11 @@
     "\n",
     "\\begin{equation}\n",
     "    \\int_{\\partial \\Omega} \\omega = \\int_{\\Omega} \\partial \\omega\n",
+    "\\end{equation}\n",
+    "\n",
+    "9.\n",
+    "\\begin{equation}\n",
+    "    \\mathscr{L} \\{ f(t) \\} (s) = \\int_{0}^{\\infty} e^{-st} f(t) \\, d\\mathrm{t} \n",
     "\\end{equation}"
    ]
   }
